--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using webscraping
-@using webscraping.Models
+﻿@using WebScraping
+@using WebScraping.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
